# whisper-normalization

./: BUILD.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: publish.yml
src/whisper_normalization/: __init__.py  basic.py  english.py
src/whisper_normalization.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
