[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper_normalization"
version = "0.1.0"
description = "Text normalization for Whisper models"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "regex",
    "more-itertools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"whisper_normalization" = ["*.json"]

